[gd_scene load_steps=3 format=3 uid="uid://v2uq8yjc1gs6"]

[ext_resource type="Script" path="res://src/UI/Styles/body_mask.gd" id="1_b5rmd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vlao"]
content_margin_right = 6.0
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="BodyMask" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
offset_right = 200.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4vlao")
script = ExtResource("1_b5rmd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "KEY_ABOUT_MODE_MASK"
mouse_filter = 1
text = "KEY_MODE"
text_overrun_behavior = 3

[node name="ModeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "KEY_IDLE"
popup/item_0/id = 0
popup/item_1/text = "KEY_ADD"
popup/item_1/id = 1
popup/item_2/text = "KEY_EDIT"
popup/item_2/id = 2

[node name="DrawCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_DRAW"
text_overrun_behavior = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_CLEAN_ALL"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/ModeOptionButton" to="." method="_on_mode_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/DrawCheckButton" to="." method="_on_draw_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
